2012-09-19  Ramon Casero  <rcasero@gmail.com>

	* Delete matlab/FiltersToolbox/Deconvolve.cpp:
	* Delete matlab/FiltersToolbox/deconvolve.m:
	* Delete cpp/src/third-party/cquammen-Clarity:
	* cpp/src/CMakeLists.txt: (v0.2.3)

	- Remove the third party clarity library and the MEX interface we
	build to run deconvolutions. We found it to be slightly buggy, and
	Matlab's own deconvolution functions work very well and are fast.

	* matlab/FiltersToolbox/scimat_blockproc3.m: (v0.2.0)
	* matlab/FiltersToolbox/blockproc3.m: (v0.3.0)

	- Replace parfor by jobs/createTask. This way, we don't need to
	create a cell array with all the image blocks, consuming a lot of
	extra memory. Instead, we can just create all the jobs, put the
	function in a task, and submit the jobs. Memory gets used only
	when jobs leave the queue and are actually running.

	- This approach also enables to interrupt execution of C++ MEX
	functions in parallel mode without having to wrap them in
	ccwrap().

	* matlab/FiltersToolbox/ccwrap.m: (v0.1.1)

	- Correct help header. This function doesn't create memory leaks
	even if you allocate memory using non-Matlab functions. Thanks to
	Friedrich Hempel (MathWorks) for the explanation.

2012-09-18  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_blockproc3.m: (v0.1.1)
	* matlab/FiltersToolbox/blockproc3.m: (v0.2.2)

	- Update syntax to check number of input and output arguments.

	* Add matlab/FiltersToolbox/ccwrap.m: (v0.1.0)

	- Wrapper that enables CTRL+C interruption of MEX files.

	* CMakeLists.txt: (v0.2.1)
	* cpp/src/third-party/boost/boost/chrono/CMakeLists.txt:
	* cpp/src/third-party/boost/boost/date_time/CMakeLists.txt:

	- Add some boost libraries that were dependencies of the ones we
	were using, but were not bing built and linked to.

2012-09-12  Ramon Casero  <rcasero@gmail.com>

	* matlab/GerardusCommon.hpp: (v0.6.0)

	- Add function ctrlcCheckPoint(). This function can be put